# Three-Dimensional-Nozzle-Design-Code

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel  WORKSPACE
src/: BUILD  main.cpp
src/MOC_2D/: BUILD  MOC_GridCalc.cpp  MOC_GridCalc.h  MOC_GridCalc_IO.cpp  dummyStruct.h  stubs.h
src/MOC_2D/common/: BUILD  Grid.h  GridPoint.h  Math.cpp  Math.h  Model.h  Result.h
src/MOC_2D/config/: BUILD  Configuration.h  Problem.h
src/MOC_2D/solver/: BUILD  NozzleSolver.cpp  NozzleSolver.h
src/MOC_Grid_BDE/: BUILD  MOC_GridCalc_BDE.cpp  MOC_GridCalc_BDE.h  MOC_GridCalc_BDE_IO.cpp
tests/MOC_2D/: BUILD  moc_2d_test.cpp
tests/fixtures/: BUILD  legacy_2d.cpp  legacy_2d.h  solver.h
tests/legacy/: BUILD  moc_legacy_test.cpp
tests/regression/: BUILD  moc_regression_test.cpp
