###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)
bazel_dep(name = "mp-units", version = "2.5.0.bcr.0")
bazel_dep(name = "spdlog", version = "1.17.0")

git_override(

    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",  # Latest as of now
)
